# SYCL_Playground

./: CMakeLists.txt  SYCL_INFO_SHEET.md
programs/: CMakeLists.txt  constants.cpp  cubic_graph.cpp  dualise.cpp  forcefield-opt.cpp  forcefield_includes.cpp  isomer_batch.cpp  isomer_batch.hh  matrix3.cpp  minimum_problem.cpp  node_neighbours.cpp  util.cpp
sycl-tests/: CMakeLists.txt  buffer-test.cpp  device_info.cpp  isomer-batch-test.cpp  kernel_properties.cpp
